[gd_scene load_steps=11 format=1]

[ext_resource path="res://scr/menu.gd" type="Script" id=1]
[ext_resource path="res://img/bouton_base.jpg" type="Texture" id=2]
[ext_resource path="res://img/bouton_clic.jpg" type="Texture" id=3]
[ext_resource path="res://font/Anke-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://img/fond_menu.jpg" type="Texture" id=5]
[ext_resource path="res://img/fond_message_large.png" type="Texture" id=6]
[ext_resource path="res://snd/bkg_main_menu.smp" type="Sample" id=7]

[sub_resource type="DynamicFont" id=1]

font/size = 40
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]

font/size = 40
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 4 )

[sub_resource type="SampleLibrary" id=3]

samples/bkg_main_menu = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}

[node name="Menu" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Start" type="TextureButton" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 120.0
margin/top = 1565.0
margin/right = 959.0
margin/bottom = 1671.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
textures/pressed = ExtResource( 3 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="Label" type="Label" parent="Start"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 228.0
margin/top = 35.0
margin/right = 598.0
margin/bottom = 75.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Option" type="TextureButton" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 121.0
margin/top = 1711.0
margin/right = 469.0
margin/bottom = 1856.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
textures/pressed = ExtResource( 3 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="Label1" type="Label" parent="Option"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 87.0
margin/top = 54.0
margin/right = 269.0
margin/bottom = 94.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Credits" type="TextureButton" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 608.0
margin/top = 1710.0
margin/right = 956.0
margin/bottom = 1855.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
textures/pressed = ExtResource( 3 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="Label2" type="Label" parent="Credits"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 81.0
margin/top = 55.0
margin/right = 263.0
margin/bottom = 95.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="."]

visibility/behind_parent = true
transform/pos = Vector2( 0.975372, 0 )
texture = ExtResource( 5 )
centered = false

[node name="SelectChapter" type="Popup" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 83.0
margin/top = 445.0
margin/right = 1020.0
margin/bottom = 1332.0
popup/exclusive = true

[node name="VBoxContainer" type="VBoxContainer" parent="SelectChapter"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 51.0
margin/top = 313.0
margin/right = 891.0
margin/bottom = 816.0
custom_constants/separation = 45
alignment = 0

[node name="Button" type="TextureButton" parent="SelectChapter/VBoxContainer"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 840.0
margin/bottom = 84.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
textures/pressed = ExtResource( 3 )
textures/disabled = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Label" type="Label" parent="SelectChapter/VBoxContainer/Button"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 841.0
margin/bottom = 84.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="SelectChapter"]

visibility/visible = false
visibility/behind_parent = true
transform/pos = Vector2( -10.2743, -92.4694 )
transform/scale = Vector2( 1, 4.86553 )
texture = ExtResource( 6 )
centered = false

[node name="SampleBKGmenu" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 3 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]

[connection signal="pressed" from="Option" to="." method="_on_Option_pressed"]

[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]


